# todo-rs

./: .gitignore  Cargo.toml
client/: Cargo.toml  index.html  styles.css
client/src/: lib.rs  main.rs
client/src/utils/: requests.rs
common/: Cargo.toml
common/src/: lib.rs  schemas.rs  tests.rs
server/: Cargo.toml  README  migration.sql  test.db
server/src/: database.rs  lib.rs  main.rs
