[package]
name = "client"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true
codegen-units = 1
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
web-sys = "0.3.63"
tokio = "1.28.2"
wasm-bindgen = "0.2.86"
serde_json = "1.0.96"
serde = "1.0.163"
anyhow = "1.0.71"
yew-router = "0.17.0"
common = { path = "../common"}
wee_alloc = "0.4.5"
