[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
argon2 = "0.5.0"
chrono = { version = "0.4.26", features = ["serde"]}
