[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.6.3", features = [ "sqlite", "runtime-tokio-rustls", "chrono" ]}
anyhow = "1.0.71"
common = { path = "../common/" }
argon2 = "0.5.0"
chrono = { version = "0.4.26", features = ["serde"]}
termion = "2.0.1"
serde = { version = "1.0.164", features = ["serde_derive"] }
